--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -9,3 +9,28 @@
 
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
 @import "minima/fastpages-dracula-highlight"; 
+
+.wrap{
+    display:flex;
+    flex-flow: row;
+}
+.card{
+    width:300px;
+    display: block;
+    border: 1px dotted black;
+    text-align: center;
+    font-size: 24px;
+    -ms-flex-item-align: center;
+    -ms-flex-align: center;
+}
+a{
+    text-decoration: none !important;
+    color: rgb(78, 38, 38);
+    line-height:100px;
+    margin:2px;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+.card:hover{
+    background: #333333;
+}
